resume model z-index bug resolved

--- a/src/Components/Certificates/certificatecard.css
+++ b/src/Components/Certificates/certificatecard.css
@@ -33,3 +33,10 @@
   /* font-weight: 700; */
   opacity: 0.7;
 }
+.link {
+  transition: 0.5s;
+}
+.link:hover {
+  color: black !important;
+  background-color: azure !important;
+}
